login, signup and javascript

--- a/Css/elec.css
+++ b/Css/elec.css
@@ -7,8 +7,155 @@
 
 header {
     width:100%;
-    height: 490vh;
+    height: 480vh;
     background-color: #ECF0F1 ;
+}
+nav{
+    height:8vh;
+    width: 100%;
+    background-color: black;
+    overflow: hidden;
+    padding: 3px 5px;
+    display: flex;
+    /* justify-content:space-between; */
+}
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color:white;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 30px;
+  
+}
+
+.sidenav a {
+  padding: 5px 8px 5px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+  display: block;
+  transition: 0.3s;
+  line-height:0px;
+}
+
+.sidenav a:hover {
+  color: #19C2D7;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  
+}
+.hamburger{
+  width:35px;
+  padding: 2px 3px;
+color:white;
+background-color:black;
+font-size:30px;
+cursor:pointer;
+border:1px solid grey;
+margin:3px 0 1px 10px;
+}
+.hamburger:hover{
+border: 1.5px solid white;}
+
+.logo img{
+    height: 6vh;
+    width: 110px;
+    margin:5px 10px 0 25px;
+}
+option{
+    font-size: 170%;
+}
+#search{
+    height: 6vh;
+    width: 700px;
+   padding:3px 5px;
+   font-size: 110%;
+   border:1px solid white;
+   border-radius: 5px;
+   padding-left: 55px;
+}
+#all{
+    position: relative;
+    left: 55px;
+    bottom: 1px;
+    height: 6vh;
+    width: 50px;
+    border-radius: 5px;
+    background-color: rgba(125, 125, 125, 0.2);
+    border: none;
+    border-right:1px solid grey;
+    font-size: 80%;
+    padding: 1px 1px;
+}
+#all:hover{
+    background-color: white;
+}
+#searchicon{
+    position: relative;
+    right: 54px;
+    top:3px;
+    height: 6vh;
+    width: 50px;
+    background-color: goldenrod;
+    color: black;
+    border-radius: 5px;
+    border: none;
+    border-left:1px solid grey;
+}
+#searchicon:hover{
+    background-color: rgb(201, 153, 34);
+}
+
+.login,.contactus,.orders{
+  margin-top: 3px;
+  height: 6vh;
+  width: 100px;
+  background-color: black;
+  color: white;
+  font-size: 105%;
+  border: 1px solid grey;
+}
+.login a, .contactus a{
+    text-decoration: none;
+    color: white;
+}
+ 
+.login:hover,.contactus:hover,.orders:hover,#shoppingcart:hover{
+   border: 1px solid white;
+}
+
+.orders{
+   margin-left: 30px;
+}
+
+.contactus{
+   margin-left: 30px;
+   margin-right: 70px;
+}
+
+#shoppingcart{
+   height: 6vh;
+   margin-top: 2px;
+   background-color: black;
+   color:white;  
+   border: 1px solid gray;
+   padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
 /*******************************************************  for div 1  *******************************************/
 
@@ -28,6 +175,7 @@ header .div1sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -40,6 +188,7 @@ header .div1sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -49,6 +198,7 @@ header .div1sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -58,6 +208,7 @@ header .div1sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -102,6 +253,7 @@ header .div2sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -112,6 +264,7 @@ header .div2sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -121,6 +274,7 @@ header .div2sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -130,6 +284,7 @@ header .div2sec4{
     background-color:white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -176,6 +331,7 @@ header .div3sec1{
     background-color:white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -186,6 +342,7 @@ header .div3sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -195,6 +352,7 @@ header .div3sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -204,7 +362,7 @@ header .div3sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /****************************************************** hover div 3 ******************************************/
@@ -248,6 +406,7 @@ header .div4sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -258,6 +417,7 @@ header .div4sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -267,6 +427,7 @@ header .div4sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -276,6 +437,7 @@ header .div4sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -320,6 +482,7 @@ header .div5sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -330,6 +493,7 @@ header .div5sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -339,6 +503,7 @@ header .div5sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -348,6 +513,7 @@ header .div5sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -394,6 +560,7 @@ header .div6sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -404,7 +571,7 @@ header .div6sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div6sec3{
@@ -413,6 +580,7 @@ header .div6sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -422,6 +590,7 @@ header .div6sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -466,7 +635,7 @@ header .div7sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -476,6 +645,7 @@ header .div7sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -485,6 +655,7 @@ header .div7sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -494,6 +665,7 @@ header .div7sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -538,6 +710,7 @@ header .div8sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -548,6 +721,7 @@ header .div8sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -557,6 +731,7 @@ header .div8sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -566,6 +741,7 @@ header .div8sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -610,6 +786,7 @@ header .div9sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -620,6 +797,7 @@ header .div9sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -629,6 +807,7 @@ header .div9sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -638,6 +817,7 @@ header .div9sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -684,6 +864,7 @@ header .div10sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -694,6 +875,7 @@ header .div10sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -703,6 +885,7 @@ header .div10sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -712,6 +895,7 @@ header .div10sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
