--- a/Css/mens.css
+++ b/Css/mens.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
 }
 header {
     width:100%;
@@ -15,6 +16,153 @@ main {
     height: 470vh;
     background-color: #ECF0F1 ;
 
+}
+nav{
+    height:8vh;
+    width: 100%;
+    background-color: black;
+    overflow: hidden;
+    padding: 3px 5px;
+    display: flex;
+    /* justify-content:space-between; */
+}
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color:white;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 30px;
+  
+}
+
+.sidenav a {
+  padding: 5px 8px 5px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+  display: block;
+  transition: 0.3s;
+  line-height:0px;
+}
+
+.sidenav a:hover {
+  color: #19C2D7;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  
+}
+.hamburger{
+  width:35px;
+  padding: 2px 3px;
+color:white;
+background-color:black;
+font-size:30px;
+cursor:pointer;
+border:1px solid grey;
+margin:3px 0 1px 10px;
+}
+.hamburger:hover{
+border: 1.5px solid white;}
+
+.logo img{
+    height: 6vh;
+    width: 110px;
+    margin:5px 10px 0 25px;
+}
+option{
+    font-size: 170%;
+}
+#search{
+    height: 6vh;
+    width: 700px;
+   padding:3px 5px;
+   font-size: 110%;
+   border:1px solid white;
+   border-radius: 5px;
+   padding-left: 55px;
+}
+#all{
+    position: relative;
+    left: 55px;
+    bottom: 1px;
+    height: 6vh;
+    width: 50px;
+    border-radius: 5px;
+    background-color: rgba(125, 125, 125, 0.2);
+    border: none;
+    border-right:1px solid grey;
+    font-size: 80%;
+    padding: 1px 1px;
+}
+#all:hover{
+    background-color: white;
+}
+#searchicon{
+    position: relative;
+    right: 54px;
+    top:3px;
+    height: 6vh;
+    width: 50px;
+    background-color: goldenrod;
+    color: black;
+    border-radius: 5px;
+    border: none;
+    border-left:1px solid grey;
+}
+#searchicon:hover{
+    background-color: rgb(201, 153, 34);
+}
+
+.login,.contactus,.orders{
+  margin-top: 3px;
+  height: 6vh;
+  width: 100px;
+  background-color: black;
+  color: white;
+  font-size: 105%;
+  border: 1px solid grey;
+}
+.login a, .contactus a{
+    text-decoration: none;
+    color: white;
+}
+ 
+.login:hover,.contactus:hover,.orders:hover,#shoppingcart:hover{
+   border: 1px solid white;
+}
+
+.orders{
+   margin-left: 30px;
+}
+
+.contactus{
+   margin-left: 30px;
+   margin-right: 70px;
+}
+
+#shoppingcart{
+   height: 6vh;
+   margin-top: 2px;
+   background-color: black;
+   color:white;  
+   border: 1px solid gray;
+   padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
 
 /*******************************************************  for div 1  *******************************************/
@@ -35,6 +183,7 @@ main .div1sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -47,6 +196,7 @@ main .div1sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -56,6 +206,7 @@ main .div1sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -65,6 +216,7 @@ main .div1sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -109,7 +261,7 @@ main .div2sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -119,6 +271,7 @@ main .div2sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -128,6 +281,7 @@ main .div2sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -137,6 +291,7 @@ main .div2sec4{
     background-color:white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -183,6 +338,7 @@ main .div3sec1{
     background-color:white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -193,6 +349,7 @@ main .div3sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -202,6 +359,7 @@ main .div3sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -211,6 +369,7 @@ main .div3sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -255,6 +414,7 @@ main .div4sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -265,6 +425,7 @@ main .div4sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -274,6 +435,7 @@ main .div4sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -283,6 +445,7 @@ main .div4sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -327,6 +490,7 @@ main .div5sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -337,6 +501,7 @@ main .div5sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -346,6 +511,7 @@ main .div5sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -355,6 +521,7 @@ main .div5sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -401,6 +568,7 @@ main .div6sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -411,6 +579,7 @@ main .div6sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -420,6 +589,7 @@ main .div6sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -429,6 +599,7 @@ main .div6sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -473,6 +644,7 @@ main .div7sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -483,6 +655,7 @@ main .div7sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -492,6 +665,7 @@ main .div7sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -501,6 +675,7 @@ main .div7sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -545,6 +720,7 @@ main .div8sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -555,6 +731,7 @@ main .div8sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -564,6 +741,7 @@ main .div8sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -573,6 +751,7 @@ main .div8sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -617,6 +796,7 @@ main .div9sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -627,6 +807,7 @@ main .div9sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -636,6 +817,7 @@ main .div9sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -645,6 +827,7 @@ main .div9sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -691,6 +874,7 @@ main .div10sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -701,6 +885,7 @@ main .div10sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -710,6 +895,7 @@ main .div10sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -719,6 +905,7 @@ main .div10sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
