--- a/Css/woman.css
+++ b/Css/woman.css
@@ -2,6 +2,154 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
+}
+nav{
+    height:8vh;
+    width: 100%;
+    background-color: black;
+    overflow: hidden;
+    padding: 3px 5px;
+    display: flex;
+    /* justify-content:space-between; */
+}
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color:white;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 30px;
+  
+}
+
+.sidenav a {
+  padding: 5px 8px 5px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+  display: block;
+  transition: 0.3s;
+  line-height:0px;
+}
+
+.sidenav a:hover {
+  color: #19C2D7;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  
+}
+.hamburger{
+  width:35px;
+  padding: 2px 3px;
+color:white;
+background-color:black;
+font-size:30px;
+cursor:pointer;
+border:1px solid grey;
+margin:3px 0 1px 10px;
+}
+.hamburger:hover{
+border: 1.5px solid white;}
+
+.logo img{
+    height: 6vh;
+    width: 110px;
+    margin:5px 10px 0 25px;
+}
+option{
+    font-size: 170%;
+}
+#search{
+    height: 6vh;
+    width: 700px;
+   padding:3px 5px;
+   font-size: 110%;
+   border:1px solid white;
+   border-radius: 5px;
+   padding-left: 55px;
+}
+#all{
+    position: relative;
+    left: 55px;
+    bottom: 1px;
+    height: 6vh;
+    width: 50px;
+    border-radius: 5px;
+    background-color: rgba(125, 125, 125, 0.2);
+    border: none;
+    border-right:1px solid grey;
+    font-size: 80%;
+    padding: 1px 1px;
+}
+#all:hover{
+    background-color: white;
+}
+#searchicon{
+    position: relative;
+    right: 54px;
+    top:3px;
+    height: 6vh;
+    width: 50px;
+    background-color: goldenrod;
+    color: black;
+    border-radius: 5px;
+    border: none;
+    border-left:1px solid grey;
+}
+#searchicon:hover{
+    background-color: rgb(201, 153, 34);
+}
+
+.login,.contactus,.orders{
+  margin-top: 3px;
+  height: 6vh;
+  width: 100px;
+  background-color: black;
+  color: white;
+  font-size: 105%;
+  border: 1px solid grey;
+}
+.login a, .contactus a{
+    text-decoration: none;
+    color: white;
+}
+ 
+.login:hover,.contactus:hover,.orders:hover,#shoppingcart:hover{
+   border: 1px solid white;
+}
+
+.orders{
+   margin-left: 30px;
+}
+
+.contactus{
+   margin-left: 30px;
+   margin-right: 70px;
+}
+
+#shoppingcart{
+   height: 6vh;
+   margin-top: 2px;
+   background-color: black;
+   color:white;  
+   border: 1px solid gray;
+   padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
 
 main {
@@ -29,6 +177,7 @@ main .div1sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -41,6 +190,7 @@ main .div1sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -50,6 +200,7 @@ main .div1sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -59,6 +210,7 @@ main .div1sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -103,6 +255,7 @@ main .div2sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -113,6 +266,7 @@ main .div2sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -122,6 +276,7 @@ main .div2sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -131,6 +286,7 @@ main .div2sec4{
     background-color:white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -177,7 +333,7 @@ main .div3sec1{
     background-color:white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -187,6 +343,7 @@ main .div3sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -196,6 +353,7 @@ main .div3sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -205,6 +363,7 @@ main .div3sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -249,6 +408,7 @@ main .div4sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -259,6 +419,7 @@ main .div4sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -268,6 +429,7 @@ main .div4sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -277,6 +439,7 @@ main .div4sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -321,6 +484,7 @@ main .div5sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -331,6 +495,7 @@ main .div5sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -340,6 +505,7 @@ main .div5sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -349,6 +515,7 @@ main .div5sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -395,6 +562,7 @@ main .div6sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -405,6 +573,7 @@ main .div6sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -414,6 +583,7 @@ main .div6sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -423,6 +593,7 @@ main .div6sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -467,6 +638,7 @@ main .div7sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -477,6 +649,7 @@ main .div7sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -486,6 +659,7 @@ main .div7sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -495,6 +669,7 @@ main .div7sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -539,6 +714,7 @@ main .div8sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -549,6 +725,7 @@ main .div8sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -558,6 +735,7 @@ main .div8sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -567,6 +745,7 @@ main .div8sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -611,6 +790,7 @@ main .div9sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -621,6 +801,7 @@ main .div9sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -630,6 +811,7 @@ main .div9sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -639,6 +821,7 @@ main .div9sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -685,6 +868,7 @@ main .div10sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -695,6 +879,7 @@ main .div10sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -704,6 +889,7 @@ main .div10sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -713,6 +899,7 @@ main .div10sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
