--- a/Css/furniture.css
+++ b/Css/furniture.css
@@ -2,13 +2,161 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
 }
 
 header {
     width:100%;
-    height: 490vh;
+    height: 480vh;
     background-color: #ECF0F1 ;
 
+}
+nav{
+    height:8vh;
+    width: 100%;
+    background-color: black;
+    overflow: hidden;
+    padding: 3px 5px;
+    display: flex;
+    /* justify-content:space-between; */
+}
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color:white;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 30px;
+  
+}
+
+.sidenav a {
+  padding: 5px 8px 5px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+  display: block;
+  transition: 0.3s;
+  line-height:0px;
+}
+
+.sidenav a:hover {
+  color: #19C2D7;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  
+}
+.hamburger{
+  width:35px;
+  padding: 2px 3px;
+color:white;
+background-color:black;
+font-size:30px;
+cursor:pointer;
+border:1px solid grey;
+margin:3px 0 1px 10px;
+}
+.hamburger:hover{
+border: 1.5px solid white;}
+
+.logo img{
+    height: 6vh;
+    width: 110px;
+    margin:5px 10px 0 25px;
+}
+option{
+    font-size: 170%;
+}
+#search{
+    height: 6vh;
+    width: 700px;
+   padding:3px 5px;
+   font-size: 110%;
+   border:1px solid white;
+   border-radius: 5px;
+   padding-left: 55px;
+}
+#all{
+    position: relative;
+    left: 55px;
+    bottom: 1px;
+    height: 6vh;
+    width: 50px;
+    border-radius: 5px;
+    background-color: rgba(125, 125, 125, 0.2);
+    border: none;
+    border-right:1px solid grey;
+    font-size: 80%;
+    padding: 1px 1px;
+}
+#all:hover{
+    background-color: white;
+}
+#searchicon{
+    position: relative;
+    right: 54px;
+    top:3px;
+    height: 6vh;
+    width: 50px;
+    background-color: goldenrod;
+    color: black;
+    border-radius: 5px;
+    border: none;
+    border-left:1px solid grey;
+}
+#searchicon:hover{
+    background-color: rgb(201, 153, 34);
+}
+
+.login,.contactus,.orders{
+  margin-top: 3px;
+  height: 6vh;
+  width: 100px;
+  background-color: black;
+  color: white;
+  font-size: 105%;
+  border: 1px solid grey;
+}
+.login a, .contactus a{
+    text-decoration: none;
+    color: white;
+}
+ 
+.login:hover,.contactus:hover,.orders:hover,#shoppingcart:hover{
+   border: 1px solid white;
+}
+
+.orders{
+   margin-left: 30px;
+}
+
+.contactus{
+   margin-left: 30px;
+   margin-right: 70px;
+}
+
+#shoppingcart{
+   height: 6vh;
+   margin-top: 2px;
+   background-color: black;
+   color:white;  
+   border: 1px solid gray;
+   padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
 
 /*******************************************************  for div 1  *******************************************/
@@ -29,6 +177,7 @@ header .div1sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
     
 }
@@ -41,6 +190,7 @@ header .div1sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -50,6 +200,7 @@ header .div1sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -59,6 +210,7 @@ header .div1sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -103,7 +255,7 @@ header .div2sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -113,7 +265,7 @@ header .div2sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div2sec3{
@@ -122,7 +274,7 @@ header .div2sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div2sec4{
@@ -131,7 +283,7 @@ header .div2sec4{
     background-color:white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /******************************************** hover for div 2 ************************************************************/
@@ -177,7 +329,7 @@ header .div3sec1{
     background-color:white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -187,7 +339,7 @@ header .div3sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div3sec3{
@@ -196,7 +348,7 @@ header .div3sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div3sec4{
@@ -205,7 +357,7 @@ header .div3sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /****************************************************** hover div 3 ******************************************/
@@ -249,7 +401,7 @@ header .div4sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -259,7 +411,7 @@ header .div4sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div4sec3{
@@ -268,7 +420,7 @@ header .div4sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div4sec4{
@@ -277,7 +429,7 @@ header .div4sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /****************************************************** hover for div 4 **************************************/
@@ -312,7 +464,6 @@ header .div5{
     position: relative;
     top: 50px;
     margin-top: 50px;
-
 }
 
 header .div5sec1{
@@ -321,7 +472,7 @@ header .div5sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -331,7 +482,7 @@ header .div5sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div5sec3{
@@ -340,7 +491,7 @@ header .div5sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div5sec4{
@@ -349,7 +500,7 @@ header .div5sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /********************************************************** hover for div 5 **********************************/
@@ -384,7 +535,6 @@ header .div6{
     position: relative;
     top: 50px;
     margin-top: 50px;
-
 }
 
 
@@ -395,7 +545,7 @@ header .div6sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -405,7 +555,7 @@ header .div6sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div6sec3{
@@ -414,7 +564,7 @@ header .div6sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div6sec4{
@@ -423,7 +573,7 @@ header .div6sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /*************************************************** hover for div 6 **************************************/
@@ -467,7 +617,7 @@ header .div7sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -477,7 +627,7 @@ header .div7sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div7sec3{
@@ -486,7 +636,7 @@ header .div7sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div7sec4{
@@ -495,7 +645,7 @@ header .div7sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /********************************************************** hover for div 7 ********************************/
@@ -539,7 +689,7 @@ header .div8sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -549,7 +699,7 @@ header .div8sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div8sec3{
@@ -558,7 +708,7 @@ header .div8sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div8sec4{
@@ -567,7 +717,7 @@ header .div8sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /************************************************************* hover for div 8 ************************************/
@@ -611,7 +761,7 @@ header .div9sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -621,7 +771,7 @@ header .div9sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div9sec3{
@@ -630,7 +780,7 @@ header .div9sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div9sec4{
@@ -639,7 +789,7 @@ header .div9sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /*******************************************************  hover for div 9 ********************************************/
@@ -685,7 +835,7 @@ header .div10sec1{
     background-color: white;
     margin-left: 70px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
     
 }
 
@@ -695,7 +845,7 @@ header .div10sec2{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div10sec3{
@@ -704,7 +854,7 @@ header .div10sec3{
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 header .div10sec4{
@@ -713,7 +863,7 @@ header .div10sec4{
     background-color: white;
     margin-left: 40px;
     margin-right: 70px;
-    
+    box-shadow: 3px 3px 5px 3px grey;
 }
 
 /*******************************************************  hover for div 10  **************************************/
