--- a/Css/cart.css
+++ b/Css/cart.css
@@ -164,7 +164,7 @@ option{
 .mcontent .clmtwo{
     width: 500px;
     height: 45vh;
-    margin-bottom: 1192px;
+    margin-bottom: 1120px;
     margin-left: 30px;
     background-color: white;
     background-attachment: fixed;
@@ -272,6 +272,7 @@ option{
 }
 .mcontent .clmtwo .buybtn{
     margin-left: 20px;
+    margin-top: 50px;
     width: 100px;
     height: 40px;
     background-color: blue;
@@ -293,7 +294,7 @@ option{
 
 footer{
 	width: 100%;
-	height: 70vh;
+	height: 80vh;
 	background-color: black;
 }
 footer .footer{
@@ -311,7 +312,7 @@ footer .footer{
 
 footer .footerone{
 	height: 320px;
-	width: 250px;
+	width: 300px;
 	margin-left: 150px;
 	position: relative;
 	top: 100px;
@@ -339,7 +340,7 @@ footer .footerone .one div:hover{
 
 footer .footertwo{
 	height: 320px;
-	width: 320px;
+	width: 340px;
 	margin-left: 80px;
 	position: relative;
 	top: 100px;
@@ -398,7 +399,7 @@ footer .footerthree .three div:hover{
 
 footer .footerfour{
 	height: 320px;
-	width: 320px;
+	width: 350px;
 	/*background-color: green;*/
 	margin-left: 100px;
 	margin-right: 180px;
@@ -423,7 +424,8 @@ footer .footerfour  .subs{
 	font-size: 20px;
 	line-height: 20px;
 	color: white;
-	margin-top: 40px;
+    margin-top: 40px;
+    margin-right: 100px;
 	margin-bottom: 20px;
 }
 footer .footerfour #email{
